@@ -137,6 +137,14 @@ sub update_engine {
 	$rs = update_ispcp_cfg();
 	exit_msg(str_to_right('[failed]', length($print)), $rs) if($rs != 0);
 	print STDOUT BOLD GREEN str_to_right('[done]', length($print));
+	
+	
+	# Check configuration file
+	$print = ' Check ispCP configuration file:';
+	print STDOUT "\t" . $print;
+	$rs = check_ispcp_cfg_file();
+	exit_msg(str_to_right('[failed]', length($print)), $rs) if($rs != 0 && $rs != -5);
+	print STDOUT BOLD GREEN str_to_right('[done]', length($print)) if($rs != -5);
 
 	#
 	## IspCP main configuration file - End
@@ -320,7 +328,7 @@ sub warn_msg {
 
 	my $rdata = undef;
 
-	my $warning = colored(['bold'], "\n\tNOTICE:") .
+	my $warning = colored(['bold blue'], "\n\tNOTICE:") .
 		" Make sure you have read and performed all steps from\n".
 		"\tdocs/distro/INSTALL document (where distro is your linux " .
 		"distribution).\n\n";
@@ -416,6 +424,180 @@ sub update_ispcp_cfg {
 	push_el(\@main::el, 'update_ispcp_config()', 'Ending...');
 
 	0;
+}
+
+# Check for empty values in configuration file
+#
+# Only the configuration settings listed in the
+# exception list can be empty.
+#
+# See main::cfg_recovery_process() for more
+# information about the recovery procedure
+#
+sub check_ispcp_cfg_file {
+
+	push_el(\@main::el, 'check_ispcp_cfg_file()', 'Starting...');
+
+	my %exception = map {$_ => undef} qw(
+		DATABASE_PASSWORD
+		SECONDARY_DNS
+		ISPCP_SUPPORT_SYSTEM_TARGET
+		MYSQL_PREFIX_TYPE
+		OTHER_ROOTKIT_LOG
+	);
+
+	my $empty_settings = [];
+
+	foreach(sort keys %main::cfg) {
+		if($main::cfg{$_} eq '' && !exists $exception{$_}) {
+			push @$empty_settings, $_;
+		}
+	}
+
+	# We switch to recovery process if one or more
+	# settings were an empty value
+	if (scalar @$empty_settings) {
+		my  $rs = cfg_recovery_process($empty_settings);
+		return $rs;
+	}
+
+	push_el(\@main::el, 'check_ispcp_cfg_file()', 'Ending...');
+
+	0;
+}
+
+# Recovery process for ispCP cfg settings who's have empty value
+#
+# If a specific dialog function exists for handling the configuration
+# setting, it is called. Otherwise, a error message is returned
+# to the user and the program ends. If a configuration setting is
+# not supported by the recovery process, those who were already
+# corrected are registered before the program ends
+#
+# The user can also choose not to run the recovery process. In this
+# case, the update process ends.
+#
+# @param ref to an array of ispCP setting names
+#
+sub cfg_recovery_process {
+
+	push_el(\@main::el, 'check_ispcp_cfg_file()', 'Starting...');
+
+	# Ref to an array of settings names that have a unallowed empty value
+	my $settings = shift;
+
+	my ($rs, $msg, $rdata, $warn_msg) = (undef, undef, undef, undef);
+
+	# Map each setting to appropriate dialog subroutine and mainua key name
+	# TODO: Add a trigger to check database connection if related setting values
+	# are changed && add a subroutine for the 'BASE_SERVER_VHOST' to prevent
+	# errors  if a dns file doesn't exist for him
+	my $recovery_dispatcher = {
+		DEFAULT_ADMIN_ADDRESS => [\&ask_admin_email, 'admin_email'],
+		SERVER_HOSTNAME => [\&ask_hostname, 'hostname'],
+		BASE_SERVER_IP => [\&ask_eth, 'eth_ip'],
+		BASE_SERVER_VHOST => [\&ask_vhost, 'admin_vhost'],
+		DATABASE_HOST => [\&ask_db_host, 'db_host'],
+		DATABASE_NAME => [\&ask_db_name, 'db_name'],
+		DATABASE_USER => [\&ask_db_user, 'db_user'],
+		PHP_FASTCGI => [\&ask_fastcgi, 'php_fastcgi']
+	};
+
+	# If several parameters are set to an empty value, we ensure
+	# that the user has installed ispCP by asking the question
+	if(scalar(@$settings) >= 2) {
+
+		print colored(['bold yellow'], "\n\n\tWARNING:").
+			" Your ispCP configuration file has several settings set\n" .
+			"\tto an empty value !\n";
+
+		do {
+			print STDOUT "\n\tAre you sure you have installed ispCP ? [Y/n]: ";
+			chomp($rdata = readline \*STDIN);
+		} while($rdata !~ /^(|y|n)$/i);
+
+		$msg = colored(['bold blue'], "\n\tNOTICE:") .
+			" The program will end now !\n" .
+			"\tPlease, run '$main::cfg{'ROOT_DIR'}/engine/setup/ispcp-setup' instead !\n";
+
+		($rdata !~ /^n$/i) or exit_msg($msg);
+	}
+
+	print STDOUT colored(['bold yellow'], "\n\n\tWARNING:") .
+		" Your ispCP configuration file is not valid!\n" .
+		"\tThe program will switch to recovery mode now...\n";
+
+	do {
+		print STDOUT "\n\tDo you want to continue [Y/n]: ";
+		chomp($rdata = readline \*STDIN);
+	} while($rdata !~ /^(|y|n)$/i);
+
+	# Exit with a notice message if the user choose
+	# to abort the recovery process
+	($rdata !~ /^n$/i) or exit_msg(
+		colored(['bold blue'], "\n\tNOTICE:") .
+		" The recovery process was aborted by user...\n"
+	);
+
+	# For each setting, calls the dialog subroutine if it is available,
+	# OTHERWISE saves the values already changed and stops the program
+	# with an specific message.
+	foreach(@$settings) {
+
+		# If the recovery process can handle the setting
+		if (exists $recovery_dispatcher->{$_}) {
+
+			# Call related dialog subroutine
+			do {
+				($rs, $warn_msg) = &{$recovery_dispatcher->{$_}[0]}();
+				print STDERR $warn_msg if(defined($warn_msg) && $warn_msg ne '');
+			} while($rs != 0);
+
+			# Set the new configuration value
+			$rs = set_conf_val($_, $main::ua{$recovery_dispatcher->{$_}[1]});
+			return $rs if ($rs != 0);
+
+			# Otherwise, the program will end here with an error message
+		} else {
+
+			# Store already changed values in ispcp.conf
+			$rs = store_conf();
+			return $rs if($rs != 0);
+			
+			# Updates the reference file if needed
+			if($main::cfg_file ne $main::ua{'old_cfg_file'}) {
+				$rs = sys_command_rs("$main::cfg{CMD_CP} -f $main::cfg_file $main::ua{'old_cfg_file'} ");
+				return $rs if($rs != 0);
+			}
+
+			$msg = colored(['bold blue'], "\n\tNOTICE: ") .
+				"The setting '$_' can't be handle by\n" .
+				"\tthe recovery process!\n\n" .
+				"\tPlease, set it manually in your $main::ua{'old_cfg_file'} and\n" .
+				"\tre-run this script.\n\n" .
+				"\tThe program will end now !\n";
+
+			exit_msg($msg);
+		}
+	}
+
+	# Store new configuration settings values and reload it
+	$rs = store_conf();
+	return $rs if($rs != 0);
+
+	# Updates the reference file if needed
+	if($main::cfg_file ne $main::ua{'old_cfg_file'}) {
+		$rs = sys_command_rs("$main::cfg{CMD_CP} -f $main::cfg_file $main::ua{'old_cfg_file'} ");
+		return $rs if($rs != 0);
+	}
+
+	print STDOUT colored(['bold blue'], "\n\tNOTICE:") .
+		" The recovery process was end successfully!\n" .
+		"\tThe update process will continue normally now...\n\n";
+
+	push_el(\@main::el, 'check_ispcp_cfg_file()', 'Ending...');
+
+	-5;
 }
 
 # Update ispCP database schema
